@@ -2,6 +2,9 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942)
+	- Fluid overlay now shows a seperate bounding box of selected
+	  items with correct handles and a dotted boundig box for all 
+	  labels (STR #790)
 	- Fixed left overhang of large chracters in Fl_Input_ (STR #941)
 	- Fixed button resizing in File Chooser (STR #884)
 	- Fixed Fluid redraw issue (STR #912)
